# PandryMinderBack

./: .gitignore
doc/: python_conv_reminder.md  todo.txt
exc/: Makefile  README.md  pyproject.toml  requirements.txt  requirements_freeze.txt
exc/alembic/: README  env.py
exc/alembic/versions/: 5cf481db2ccf_test_create.py
exc/api/: api.py  main.py
exc/api/entities/: test.py
exc/api/routers/: test.py
exc/database/: sql_session.py
exc/models/: __init__.py  base_model.py  ingredient.py  recipe.py  test.py
exc/scripts/: db_create.py
exc/utils/: classes.py  env_settings.py  project_settings.py
