[project]
name = "PandryMinder"
version = "0.1.0"
description = "A api to keep in mind stuff in your pandry"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "cryptography>=46.0.5",
    "fastapi>=0.134.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
